[package]
name = "ue5cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.12", features = ["derive"] }
config = "0.13.3"
dirs = "5.0.1"
extend = "1.2.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.102"
